[project]
name = "fusionauth-example-mock-testing-vs-dev-server"
version = "0.1.0"
description = "Example repo for the Why mocking sucks post illustrating testing FusionAuth with mocking vs with the development server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.3.4",
    "requests>=2.32.3",
]
